remove horizontal scroll bug

--- a/src/scss/components/_main-menu.scss
+++ b/src/scss/components/_main-menu.scss
@@ -212,9 +212,9 @@
 }
 .cbp-hssubmenu {
 	position: absolute;
-	left: calc((100vw - 100%) / 2 * -1);
+	left: calc((99vw - 100%) / 2 * -1);
 	top: 100%;
-    width: 100vw;
+    width: 99vw;
 	z-index: 0;
 	text-align: center; /* for aligning the sub items */
 	visibility: hidden;
